Add support for android 8

--- a/app/src/main/res/layout/layout_available_wifi_item.xml
+++ b/app/src/main/res/layout/layout_available_wifi_item.xml
@@ -2,19 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center_vertical"
     android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tv_ssid"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="WIFI 1" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/btn_connect_wifi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Connect" />
+        <TextView
+            android:id="@+id/tv_ssid"
+            android:layout_weight="0.3"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="WIFI 1 " />
+
+        <EditText
+            android:id="@+id/et_oreo_ssid_key"
+            android:layout_weight="0.7"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="Input SSID Key Here"
+            android:visibility="gone" />
+        <Button
+            android:layout_marginLeft="10dp"
+            android:id="@+id/btn_connect_wifi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Connect" />
+    </LinearLayout>
 
 </LinearLayout>
