--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -4,8 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:keepScreenOn="true"
     tools:context=".ui.SendActivity">
+    <TextView
+        android:id="@+id/tv_ssid_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 
+    <TextView
+        android:id="@+id/tv_ssid_key"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
     <ScrollView
         android:id="@+id/sv_added_file_list"
         android:layout_width="match_parent"
